[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", version = "0.3.1",features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.0", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", version = "0.1.5",features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"]   }
embassy-embedded-hal = {  git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"]}
embassy-net = {git = "https://github.com/embassy-rs/embassy.git",  features = ["defmt", "nightly", "tcp", "dhcpv4", "medium-ethernet"] }
cyw43 = {  git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "firmware-logs"]}
cyw43-pio = {  git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "overclock"]}
embedded-ccs811 = { git = "https://github.com/eldruin/embedded-ccs811-rs.git" }

embedded-hal = "=1.0.0-rc.1"
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
format_no_std = "1.0.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
static_cell = { version = "2.0.0", features = ["nightly"]}
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
lite-json = { version = "0.2.0", default-features = false }
embassy-sync = { version = "0.4.0", features = ["nightly", "defmt"] }
typenum = "1.17.0"
fixed = "1.24.0"
